crates/nash-report/tests/can/snapshots/can__kinds__alias_substitution_preserves_application_head_and_argument.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 324
---
Located {
    region: Region {
        start: Position {
            line: 0,
            column: 0,
        },
        end: Position {
            line: 0,
            column: 0,
        },
    },
    value: Named {
        reference: QualifiedName {
            home: ModuleName {
                package: Some(
                    PackageName {
                        author: "nash",
                        project: "core",
                    },
                ),
                name: "Builtin",
            },
            name: "list",
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 0,
                    },
                },
                value: Named {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "unit",
                    },
                    args: [],
                },
            },
        ],
    },
}
