crates/nash-report/tests/can/snapshots/can__kinds__annotation_checks_alias_contract_before_argument_splitting.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 605
description: "module Main exposing (..)\n\nimport Restricted exposing (type restricted)\n\nf : restricted ()\nf x = x\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in the annotation for `f`:
   ╭─[src/Main.nash:5:16]
 4 │ 
 5 │ f : restricted ()
   ·                ──
 6 │ f x = x
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
