crates/nash-report/tests/can/snapshots/can__kinds__annotation_parameter_occurrences_share_one_kind.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 411
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\nf : list 'f -> 'f 'a -> int\nf xs g = 1\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in the annotation for `f`.
   ╭─[src/Main.nash:5:19]
 4 │ 
 5 │ f : list 'f -> 'f 'a -> int
   ·                   ──
 6 │ f xs g = 1
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
