crates/nash-report/tests/can/snapshots/can__kinds__annotation_rejects_inconsistent_higher_kinded_arguments.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 889
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype tag 'a = Tag\ntype option 'a = Some 'a\ntype app 'f 'a = App ('f 'a)\ntype wrap 'f 'g 'a = Wrap ('f ('g 'a))\nidentity : wrap (app tag) app option -> wrap (app tag) app option\nidentity x = x\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in the annotation for `identity`.
    ╭─[src/Main.nash:9:27]
  8 │ type wrap 'f 'g 'a = Wrap ('f ('g 'a))
  9 │ identity : wrap (app tag) app option -> wrap (app tag) app option
    ·                           ───
 10 │ identity x = x
    ╰────
  help: Expected kind `Type`, found `Type -> Type`.
