crates/nash-report/tests/can/snapshots/can__kinds__applied_head_is_a_free_variable.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 342
description: "module Main exposing (..)\n\ntype wrap 'a = Wrap ('f 'a)\n"
info: diagnostic
---
nash::names::type_vars_unbound_in_union

  × The `wrap` type uses an unbound type variable `f` in its definition:
   ╭─[src/Main.nash:3:22]
 2 │ 
 3 │ type wrap 'a = Wrap ('f 'a)
   ·                      ──
   ╰────
  help: Declare the type variables:

            type wrap 'a 'f = ...
