crates/nash-report/tests/can/snapshots/can__kinds__base_kinded_parameter_cannot_be_applied.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 240
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype wrong 'f = Wrong 'f ('f Int)\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field 2 of little constructor `Wrong` in `wrong`.
   ╭─[src/Main.nash:5:30]
 4 │ 
 5 │ type wrong 'f = Wrong 'f ('f Int)
   ·                              ───
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
