crates/nash-report/tests/can/snapshots/can__kinds__big_alias.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 139
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias Id = Int\n"
---
(
    [],
    [
        (
            "Id",
            Type,
            [],
        ),
    ],
)
